# nsi-projet-minijeux

./: CAHIER_DES_CHARGES.md  INFRASTRUCTURE.md  JOURNAL.md  LICENSE  ORAL.md  README.md  SCHEMAS.md  SECURITY.md  TODO.md  database.db  main.py  pbkdf2.py  pyproject.toml  requirements.txt
design/: README.md  cartouche_v1-20241202-094923.piskel  ciseau.piskel  feuille.piskel  pierre.piskel
livrables/accueil/: index.html
livrables/accueil/css/: theme.css
livrables/osu/: osu.html  osu.js
src/: create_account.html  credits.html  dino.html  game.html  index.html  justeprix.html  login.html  morpion.html  osu.html  pfc.html
src/css/: dino.css  justeprix.css  morpion.css  osu.css  pfc.css  styles.css  theme.css
src/js/: dino.js  justeprix.js  morpion.js  navigation.js  osu.js  pfc.js  sendScore.js
src/src/audio/: README.md
static/audio/: README_audio.md
static/css/: dino.css  fonts.css  justeprix.css  morpion.css  osu.css  pfc.css  styles.css  table.css  theme.css
static/js/: dino.js  justeprix.js  morpion.js  navigation.js  osu.js  pfc.js  sendScore.js  tone.min.js
templates/: base.html  base.tmpl  create_account.html  credits.html  dino.html  error.html  index.html  justeprix.html  leaderboard.html  login.html  morpion.html  osu.html  pfc.html  profile.html
